# GA-tools

./: .gitignore  README.md
Base-GeneAlgPy/: setup.py
Base-GeneAlgPy/GeneAlgPy/: __init__.py  basefile.py
GA-Haskell/: CHANGELOG.md  GA-Haskell.cabal  LICENSE
GA-Haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
GA-Haskell/dist-newstyle/packagedb/ghc-9.2.8/: GA-Haskell-0.1.0.0-inplace.conf  package.cache
GA-Haskell/test/: Main.hs
GA-Python/: CMakeLists.txt  README.md  pyproject.toml
GA-Python/src/: example.f95
GA-Python/src/GENEToolsPy/Raw_FTN/: selection.f95
GA-Python/tests/: InstallCheck.py
ga-rust/: Cargo.toml
ga-rust/src/: lib.rs  main.rs
ga-rust/tests/: cli.rs
