[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cython']

[project]
name = "GENEToolsPy"
version = "0.0.5"
dependencies = ["numpy"]
authors = [
  { name="Adam Shannon", email="adam.shannon02@gmail.com" },
]
description = "Genetic algorithm tools for python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"