[package]
name = "genes"
version = "0.1.0"
edition = "2021"
authors = ["Adam Shannon <adam.shannon02@gmail.com>"]
license = "MIT"
description = "Genetic algorithm tools in Rust with parameter parsing infrastructure"
readme = "README.md"
homepage = "https://github.com/Adam-Shannon/GA-tools"
repository = "https://github.com/Adam-Shannon/GA-tools"
keywords = ["cli", "tools", "Genetic Programming", "Genetic Algorithms", "Scientific computing", "optimisation"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0"}
indicatif = {version = "*"} 

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
assert_fs ={ version = "*"}